Set up PG Database

--- a/example.env
+++ b/example.env
@@ -1,10 +1,13 @@
-## Rename This File To .env And Change The superSecretPassword/superSecretKey. ##
+## Rename This File To .env And Change The supersecurepassword/supersecurekey. ##
 
-SA_PASSWORD=superSecretPassword
+PG_USER=myuser
+PG_PASSWORD=supersecurepassword
+PG_ADMIN_EMAIL=admin@example.com
+PG_ADMIN_PASSWORD=supersecurepassword
+
 DB_DATASOURCE=workoutdb
 DB_INITIALCATALOG=WorkoutDb
-DB_USERID=sa                     ## Or another Database user ##
-DB_PASSWORD=superSecretPassword
+
 JWT_ISSUER=localhost
 JWT_AUDIENCE=localhost
-JWT_SECRETKEY=superSecretKey
+JWT_SECRETKEY=supersecurekey
