--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,48 +1,52 @@
 services:
-  workoutapi:
-    build: ./WorkoutApi
+  # workoutapi:
+  #   build: ./z-man-workout-api
+  #   environment:
+  #     - DB_DATASOURCE=${DB_DATASOURCE}
+  #     - DB_INITIALCATALOG=${DB_INITIALCATALOG}
+  #     - DB_USERID=${DB_USERID}
+  #     - DB_PASSWORD=${DB_PASSWORD}
+  #     - JWT_ISSUER=${JWT_ISSUER}
+  #     - JWT_AUDIENCE=${JWT_AUDIENCE}
+  #     - JWT_SECRETKEY=${JWT_SECRETKEY}
+  #   ports:
+  #     - "8080:8080"
+  #     - "8081:8081"
+  #   networks:
+  #     - workoutnetwork
+  #   depends_on:
+  #     - workoutdb
+    
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
     environment:
-      - DB_DATASOURCE=${DB_DATASOURCE}
-      - DB_INITIALCATALOG=${DB_INITIALCATALOG}
-      - DB_USERID=${DB_USERID}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - JWT_ISSUER=${JWT_ISSUER}
-      - JWT_AUDIENCE=${JWT_AUDIENCE}
-      - JWT_SECRETKEY=${JWT_SECRETKEY}
+      PGADMIN_DEFAULT_EMAIL: ${PG_ADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PG_ADMIN_PASSWORD}
     ports:
-      - "8080:8080"
-      - "8081:8081"
+      - "8080:80"
     networks:
       - workoutnetwork
     depends_on:
       - workoutdb
 
-  # workoutclient:
-  #   build: ./WorkoutClient
-  #   ports:
-  #     - "8080:80"
-  #   networks:
-  #     - workoutnetwork
-    
   workoutdb:
-    image: mcr.microsoft.com/mssql/server:2022-latest
+    image: postgres
     container_name: workoutdb
     environment:
-      - SA_PASSWORD=${SA_PASSWORD}
-      - ACCEPT_EULA=Y
+      POSTGRES_USER: ${PG_USER}
+      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_DB: workoutdb
     ports:
-      - "1433:1433"
+      - "5432:5432"
     networks:
       - workoutnetwork
     volumes:
-      - WorkoutData:/var/opt/mssql
+      - WorkoutData:/var/lib/postgresql/data
 
 networks:
   workoutnetwork:
-    ipam:
-      driver: default
-      config:
-        - subnet: "172.18.0.0/16"
+    driver: bridge
 
 volumes:
   WorkoutData:
