--- a/z-man-workout-api/WorkoutApi/Dockerfile
+++ b/z-man-workout-api/WorkoutApi/Dockerfile
@@ -9,17 +9,17 @@ ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["WorkoutApi/WorkoutApi.csproj", "WorkoutApi/"]
-RUN dotnet restore "./WorkoutApi/./WorkoutApi.csproj"
+COPY ["z-man-workout-api/WorkoutApp.API.csproj", "WorkoutApp.API/"]
+RUN dotnet restore "./WorkoutApp.API/./WorkoutApp.API.csproj"
 COPY . .
-WORKDIR "/src/WorkoutApi"
-RUN dotnet build "./WorkoutApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/WorkoutApp.API"
+RUN dotnet build "./WorkoutApp.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./WorkoutApi.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./WorkoutApp.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "WorkoutApi.dll"]
+ENTRYPOINT ["dotnet", "WorkoutApp.API.dll"]
